@@ -15,6 +15,7 @@ Version 6.0.0
 - Implemented _muldiv64 for bytecode
 - Made Spin2 loop behaviour match that of other languages (like PNut v38)
 - Optimized nucode output considerably
+- Passing a NULL pointer to mount() now causes an error, rather than unmounting
 - Some internal cleanups in the code generators
 
 Version 5.9.28
